--- a/.config/wlogout/style.css
+++ b/.config/wlogout/style.css
@@ -1,86 +1,120 @@
-/* ----------- 💫 https://github.com/JaKooLit 💫 -------- */
-/* wallust-wlogout */
-
-/* Importing wallust colors */
-@import '../../.config/waybar/wallust/colors-waybar.css';
+* {
+    background-image: none;
+    font-size: 24px;
+}
 
 window {
-    font-family: Fira Code Medium;
-    font-size: 16pt;
-    color: #cdd6f4; /* text */
-    background-color: rgba(30, 30, 46, 0.6);
+    background-color: transparent;
 }
 
 button {
+    color: #ffffff;
+    background-color: #111111;
+    outline-style: none;
+    border: none;
+    border-width: 0px;
     background-repeat: no-repeat;
     background-position: center;
     background-size: 20%;
-    background-color: rgba(200, 220, 255, 0);
+    border-radius: 0px;
+    box-shadow: none;
+    text-shadow: none;
     animation: gradient_f 20s ease-in infinite;
-    border-radius: 80px; /* Increased border radius for a more rounded look */
 }
 
 button:focus {
-    background-size: 25%;
-	border: 0px;
-
+    color: #111111;
+    background-color: #ffffff;
+    background-size: 30%;
 }
 
 button:hover {
-    background-color: @color12; 
-    color: #1e1e2e;
-    background-size: 50%;
-    margin: 30px;
-    border-radius: 80px; 
-    transition: all 0.3s cubic-bezier(.55, 0.0, .28, 1.682), box-shadow 0.2s ease-in-out, background-color 0.2s ease-in-out;
-    box-shadow: 0 0 50px @color7; 
-	
+    color: #111111;
+    background-color: #ffffff;
+    background-size: 40%;
+    border-radius: 24px;
+    /*animation: gradient_f 20s ease-in infinite;
+    transition: all 0.3s cubic-bezier(.55,0.0,.28,1.682);*/
 }
 
-/* Adjust the size of the icon or content inside the button */
-button span {
-    font-size: 1.2em; /* Increase the font size */
+button:hover#lock {
+    background-image: image(url("/home/farel/.config/wlogout/icons/lock_black.png"), url("/usr/share/wlogout/icons/lock.png"), url("/usr/local/share/wlogout/icons/lock.png"));
+    border-top-left-radius: 24px;
+    border-bottom-left-radius: 24px;
+    margin : 12px 0px 12px 12px;
 }
 
+
+button:focus#lock {
+    background-image: image(url("/home/farel/.config/wlogout/icons/lock_black.png"), url("/usr/share/wlogout/icons/lock.png"), url("/usr/local/share/wlogout/icons/lock.png"));
+    border-top-left-radius: 24px;
+    border-bottom-left-radius: 24px;
+    margin : 12px 0px 12px 12px;
+}
+
+button:hover#logout { 
+    background-image: image(url("/home/farel/.config/wlogout/icons/logout_black.png"), url("/usr/share/wlogout/icons/lock.png"), url("/usr/local/share/wlogout/icons/lock.png"));
+    border-radius: 0px;
+    margin : 12px 0px 12px 0px;
+}
+
+button:hover#suspend {
+    background-image: image(url("/home/farel/.config/wlogout/icons/suspend_black.png"), url("/usr/share/wlogout/icons/lock.png"), url("/usr/local/share/wlogout/icons/lock.png"));
+    border-radius: 0px;
+    margin : 12px 0px 12px 0px;
+}
+
+button:hover#shutdown {
+    background-image: image(url("/home/farel/.config/wlogout/icons/shutdown_black.png"), url("/usr/share/wlogout/icons/lock.png"), url("/usr/local/share/wlogout/icons/lock.png"));
+    border-radius: 0px;
+    margin : 12px 0px 12px 0px;
+}
+
+button:hover#hibernate {
+    background-image: image(url("/home/farel/.config/wlogout/icons/hibernate_black.png"), url("/usr/share/wlogout/icons/lock.png"), url("/usr/local/share/wlogout/icons/lock.png"));
+    border-radius: 0px;
+    margin : 12px 0px 12px 0px;
+}
+
+button:hover#reboot {
+    background-image: image(url("/home/farel/.config/wlogout/icons/reboot_black.png"), url("/usr/share/wlogout/icons/lock.png"), url("/usr/local/share/wlogout/icons/lock.png"));
+    border-top-right-radius: 24px;
+    border-bottom-right-radius: 24px;
+    margin : 12px 12px 12px 0px;
+}
 
 #lock {
-    background-image: image(url("./icons/lock_white.png"));
-}
-#lock:hover {
-    background-image: image(url("./icons/lock_white.png"));
+    background-image: image(url("/home/farel/.config/wlogout/icons/lock_white.png"), url("/usr/share/wlogout/icons/lock.png"), url("/usr/local/share/wlogout/icons/lock.png"));
+    border-radius: 24px 0px 0px 24px;
+    margin : 12px 0px 12px 12px;
 }
 
 #logout {
-    background-image: image(url("./icons/logout_white.png"));
-}
-#logout:hover {
-    background-image: image(url("./icons/logout_white.png"));
+    background-image: image(url("/home/farel/.config/wlogout/icons/logout_white.png"), url("/usr/share/wlogout/icons/logout.png"), url("/usr/local/share/wlogout/icons/logout.png"));
+    border-radius: 0px 0px 0px 0px;
+    margin : 12px 0px 12px 0px;
 }
 
 #suspend {
-    background-image: image(url("./icons/suspend_white.png"));
-}
-#suspend:hover {
-    background-image: image(url("./icons/suspend_white.png"));
+    background-image: image(url("/home/farel/.config/wlogout/icons/suspend_white.png"), url("/usr/share/wlogout/icons/suspend.png"), url("/usr/local/share/wlogout/icons/suspend.png"));
+    border-radius: 0px 0px 0px 0px;
+    margin : 12px 0px 12px 0px;
 }
 
 #shutdown {
-    background-image: image(url("./icons/shutdown_white.png"));
-}
-#shutdown:hover {
-    background-image: image(url("./icons/shutdown_white.png"));
-}
-
-#reboot {
-    background-image: image(url("./icons/reboot_white.png"));
-}
-#reboot:hover {
-    background-image: image(url("./icons/reboot_white.png"));
+    background-image: image(url("/home/farel/.config/wlogout/icons/shutdown_white.png"), url("/usr/share/wlogout/icons/shutdown.png"), url("/usr/local/share/wlogout/icons/shutdown.png"));
+    border-radius: 0px 0px 0px 0px;
+    margin : 12px 0px 12px 0px;
 }
 
 #hibernate {
-    background-image: image(url("./icons/hibernate_white.png"));
+    background-image: image(url("/home/farel/.config/wlogout/icons/hibernate_white.png"), url("/usr/share/wlogout/icons/hibernate.png"), url("/usr/local/share/wlogout/icons/hibernate.png"));
+    border-radius: 0px 0px 0px 0px;
+    margin : 12px 0px 12px 0px;
 }
-#hibernate:hover {
-    background-image: image(url("./icons/hibernate_white.png"));
+
+#reboot {
+    background-image: image(url("/home/farel/.config/wlogout/icons/reboot_white.png"), url("/usr/share/wlogout/icons/reboot.png"), url("/usr/local/share/wlogout/icons/reboot.png"));
+    border-radius: 0px 24px 24px 0px;
+    margin : 12px 12px 12px 0px;
 }
